# ratatui-markdown

./: Cargo.toml  PLAN.md  README.md
.github/workflows/: ci.yml  clippy.yml  test.yml
docs/guides/ar/: contributing.md  getting-started.md  index.md  markdown.md  tree.md
docs/guides/en/: contributing.md  getting-started.md  index.md  markdown.md  preview.md  tree.md
docs/guides/es/: contributing.md  getting-started.md  index.md  markdown.md  tree.md
docs/guides/fr/: contributing.md  getting-started.md  index.md  markdown.md  tree.md
docs/guides/ja/: contributing.md  getting-started.md  index.md  markdown.md  tree.md
docs/guides/ko/: contributing.md  getting-started.md  index.md  markdown.md  tree.md
docs/guides/ru/: contributing.md  getting-started.md  index.md  markdown.md  tree.md
docs/guides/zhs/: contributing.md  getting-started.md  index.md  markdown.md  tree.md
docs/guides/zht/: contributing.md  getting-started.md  index.md  markdown.md  tree.md
examples/: basic.rs  code.rs  custom_code_block.rs  image.rs  mermaid.rs  mermaid_image.rs  scrollable.rs  selector.rs  span_tree_cursor.rs  text_input.rs  tree_list.rs
examples/utils/: image_support.rs  mcfunction.pest  mcfunction.rs  mod.rs
src/: lib.rs  theme.rs
src/constants/: mod.rs
src/highlight/: config.rs  hooks.rs  mod.rs  pest_bridge.rs  segment.rs  treesitter.rs
src/markdown/: hooks.rs  image.rs  inline.rs  mod.rs  parser.rs  render.rs  render_tests.rs  types.rs
src/mermaid/: block.rs  class_diagram.rs  gantt.rs  layout.rs  mod.rs  parser.rs  pie.rs  quadrant.rs  render.rs  types.rs
src/preview/: mod.rs
src/scroll/: mod.rs  scrollable_list.rs
src/scroll/span_tree/: mod.rs  render.rs
src/text_input/: edit_render.rs  mod.rs
src/tree/collapsible_tree/: node_ops.rs
src/viewer/: mod.rs
