[package]
name = "ratatui-markdown"
version = "0.2.1"
edition = "2021"
rust-version = "1.74"
authors = ["langyo <langyo.china@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Markdown rendering, syntax highlighting, collapsible trees, and rich scroll widgets for ratatui"
repository = "https://github.com/celestia-island/ratatui-markdown"
keywords = ["ratatui", "markdown", "tui", "terminal", "json", "tree-sitter"]
categories = ["command-line-interface", "text-processing"]

[lib]
doctest = false

[features]
default = ["markdown", "scroll", "tree", "preview"]
markdown = []
image = ["dep:image"]
scroll = []
tree = ["dep:serde_json", "dep:toml", "scroll"]
preview = ["markdown", "scroll", "tree"]
mermaid = ["markdown", "dep:pest", "dep:pest_derive"]
viewer = ["markdown", "scroll"]

highlight = ["dep:tree-sitter", "dep:tree-sitter-highlight"]
highlight-lang-rust = ["highlight", "dep:tree-sitter-rust"]
highlight-lang-python = ["highlight", "dep:tree-sitter-python"]
highlight-lang-go = ["highlight", "dep:tree-sitter-go"]
highlight-lang-java = ["highlight", "dep:tree-sitter-java"]
highlight-lang-html = ["highlight", "dep:tree-sitter-html"]
highlight-lang-css = ["highlight", "dep:tree-sitter-css"]
highlight-lang-json = ["highlight", "dep:tree-sitter-json"]
highlight-lang-toml = ["highlight", "dep:tree-sitter-toml-ng"]
highlight-lang-sql = ["highlight", "dep:tree-sitter-sequel"]
highlight-lang-all = [
    "highlight-lang-rust",
    "highlight-lang-python",
    "highlight-lang-go",
    "highlight-lang-java",
    "highlight-lang-html",
    "highlight-lang-css",
    "highlight-lang-json",
    "highlight-lang-toml",
    "highlight-lang-sql",
]

[dependencies]
image = { version = "^0.25", optional = true, default-features = false, features = ["png", "webp"] }
pest = { version = "^2", optional = true }
pest_derive = { version = "^2", optional = true }
ratatui = "^0.29"
serde_json = { version = "^1", optional = true }
toml = { version = "^0.8", optional = true }
tree-sitter = { version = "0.26", optional = true }
tree-sitter-highlight = { version = "0.26", optional = true }
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-python = { version = "0.25", optional = true }
tree-sitter-go = { version = "0.25", optional = true }
tree-sitter-java = { version = "0.23", optional = true }
tree-sitter-html = { version = "0.23", optional = true }
tree-sitter-css = { version = "0.25", optional = true }
tree-sitter-json = { version = "0.24", optional = true }
tree-sitter-toml-ng = { version = "0.7", optional = true }
tree-sitter-sequel = { version = "0.3", optional = true }
unicode-width = "^0.2"

[dev-dependencies]
anyhow = "^1"
crossterm = "^0.28"
lipsum = "^0.9"
ratatui-image = { version = "9", default-features = false, features = ["crossterm"] }

[[example]]
name = "image"
required-features = ["image"]

[[example]]
name = "mermaid"
required-features = ["mermaid"]

[[example]]
name = "code"
required-features = ["highlight-lang-all"]
