[package]
name = "ratatui-markdown"
version = "0.3.6"
edition = "2021"
rust-version = "1.88"
authors = ["langyo <langyo.china@gmail.com>"]
license = "LicenseRef-sysl-1.0"
license-file = "LICENSE"
readme = "README.md"
description = "Markdown rendering, syntax highlighting, collapsible trees, and rich scroll widgets for ratatui"
repository = "https://github.com/celestia-island/ratatui-markdown"
keywords = ["ratatui", "markdown", "tui", "terminal", "highlight"]
categories = ["command-line-interface", "text-processing"]

[lib]
doctest = true

[features]
default = [
    "markdown",
    "scroll",
    "tree",
    "preview",
    "mermaid",
    "image",
    "viewer",
]
markdown = []
image = ["dep:image"]
scroll = []
tree = ["dep:serde_json", "dep:toml", "scroll"]
preview = ["markdown", "scroll", "tree"]
mermaid = ["markdown", "dep:pest", "dep:pest_derive"]
viewer = ["markdown", "scroll"]

highlight = ["dep:tree-sitter", "dep:tree-sitter-highlight"]
highlight-pest = ["highlight", "dep:pest"]
highlight-lang-bash = ["highlight", "dep:tree-sitter-bash"]
highlight-lang-c = ["highlight", "dep:tree-sitter-c"]
highlight-lang-cpp = ["highlight", "dep:tree-sitter-cpp"]
highlight-lang-c-sharp = ["highlight", "dep:tree-sitter-c-sharp"]
highlight-lang-css = ["highlight", "dep:tree-sitter-css"]
highlight-lang-dart = ["highlight", "dep:tree-sitter-dart"]
highlight-lang-diff = ["highlight", "dep:tree-sitter-diff"]
highlight-lang-elixir = ["highlight", "dep:tree-sitter-elixir"]
highlight-lang-go = ["highlight", "dep:tree-sitter-go"]
highlight-lang-haskell = ["highlight", "dep:tree-sitter-haskell"]
highlight-lang-html = ["highlight", "dep:tree-sitter-html"]
highlight-lang-java = ["highlight", "dep:tree-sitter-java"]
highlight-lang-javascript = ["highlight", "dep:tree-sitter-javascript"]
highlight-lang-json = ["highlight", "dep:tree-sitter-json"]
highlight-lang-cmake = ["highlight", "dep:tree-sitter-cmake"]
highlight-lang-kotlin = ["highlight", "dep:tree-sitter-kotlin-ng"]
highlight-lang-lua = ["highlight", "dep:tree-sitter-lua"]
highlight-lang-nix = ["highlight", "dep:tree-sitter-nix"]
highlight-lang-objc = ["highlight", "dep:tree-sitter-objc"]
highlight-lang-ocaml = ["highlight", "dep:tree-sitter-ocaml"]
highlight-lang-php = ["highlight", "dep:tree-sitter-php"]
highlight-lang-powershell = ["highlight", "dep:tree-sitter-powershell"]
highlight-lang-proto = ["highlight", "dep:tree-sitter-proto"]
highlight-lang-python = ["highlight", "dep:tree-sitter-python"]
highlight-lang-r = ["highlight", "dep:tree-sitter-r"]
highlight-lang-regex = ["highlight", "dep:tree-sitter-regex"]
highlight-lang-ruby = ["highlight", "dep:tree-sitter-ruby"]
highlight-lang-rust = ["highlight", "dep:tree-sitter-rust"]
highlight-lang-scala = ["highlight", "dep:tree-sitter-scala"]
highlight-lang-solidity = ["highlight", "dep:tree-sitter-solidity"]
highlight-lang-sql = ["highlight", "dep:tree-sitter-sequel"]
highlight-lang-swift = ["highlight", "dep:tree-sitter-swift"]
highlight-lang-toml = ["highlight", "dep:tree-sitter-toml-ng"]
highlight-lang-typescript = ["highlight", "dep:tree-sitter-typescript"]
highlight-lang-xml = ["highlight", "dep:tree-sitter-xml"]
highlight-lang-yaml = ["highlight", "dep:tree-sitter-yaml"]
highlight-lang-zig = ["highlight", "dep:tree-sitter-zig"]

highlight-lang-all = [
    "highlight-lang-bash",
    "highlight-lang-c",
    "highlight-lang-cpp",
    "highlight-lang-c-sharp",
    "highlight-lang-css",
    "highlight-lang-dart",
    "highlight-lang-diff",
    "highlight-lang-elixir",
    "highlight-lang-go",
    "highlight-lang-haskell",
    "highlight-lang-html",
    "highlight-lang-java",
    "highlight-lang-javascript",
    "highlight-lang-json",
    "highlight-lang-cmake",
    "highlight-lang-kotlin",
    "highlight-lang-lua",
    "highlight-lang-nix",
    "highlight-lang-objc",
    "highlight-lang-ocaml",
    "highlight-lang-php",
    "highlight-lang-powershell",
    "highlight-lang-proto",
    "highlight-lang-python",
    "highlight-lang-r",
    "highlight-lang-regex",
    "highlight-lang-ruby",
    "highlight-lang-rust",
    "highlight-lang-scala",
    "highlight-lang-solidity",
    "highlight-lang-sql",
    "highlight-lang-swift",
    "highlight-lang-toml",
    "highlight-lang-typescript",
    "highlight-lang-xml",
    "highlight-lang-yaml",
    "highlight-lang-zig",
    "highlight-pest",
]

[dependencies]
image = { version = "^0.25", optional = true, default-features = false, features = [
    "png",
    "webp",
] }
pest = { version = "^2", optional = true }
pest_derive = { version = "^2", optional = true }
ratatui = "^0.30"
serde_json = { version = "^1", optional = true }
toml = { version = "^0.8", optional = true }
tree-sitter = { version = "0.26", optional = true }
tree-sitter-highlight = { version = "0.26", optional = true }
tree-sitter-bash = { version = "0.25", optional = true }
tree-sitter-c = { version = "0.24", optional = true }
tree-sitter-cpp = { version = "0.23", optional = true }
tree-sitter-c-sharp = { version = "0.23", optional = true }
tree-sitter-css = { version = "0.25", optional = true }
tree-sitter-dart = { version = "0.2", optional = true }
tree-sitter-diff = { version = "0.1", optional = true }
tree-sitter-elixir = { version = "0.3", optional = true }
tree-sitter-go = { version = "0.25", optional = true }
tree-sitter-haskell = { version = "0.23", optional = true }
tree-sitter-html = { version = "0.23", optional = true }
tree-sitter-java = { version = "0.23", optional = true }
tree-sitter-javascript = { version = "0.25", optional = true }
tree-sitter-json = { version = "0.24", optional = true }
tree-sitter-cmake = { version = "0.7", optional = true }
tree-sitter-kotlin-ng = { version = "1.1", optional = true }
tree-sitter-lua = { version = "0.5", optional = true }
tree-sitter-nix = { version = "0.3", optional = true }
tree-sitter-objc = { version = "3.0", optional = true }
tree-sitter-ocaml = { version = "0.25", optional = true }
tree-sitter-php = { version = "0.24", optional = true }
tree-sitter-powershell = { version = "0.26", optional = true }
tree-sitter-proto = { version = "0.4", optional = true }
tree-sitter-python = { version = "0.25", optional = true }
tree-sitter-r = { version = "1.2", optional = true }
tree-sitter-regex = { version = "0.25", optional = true }
tree-sitter-ruby = { version = "0.23", optional = true }
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-scala = { version = "0.26", optional = true }
tree-sitter-solidity = { version = "1.2", optional = true }
tree-sitter-sequel = { version = "0.3", optional = true }
tree-sitter-swift = { version = "0.7", optional = true }
tree-sitter-toml-ng = { version = "0.7", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-xml = { version = "0.7", optional = true }
tree-sitter-yaml = { version = "0.7", optional = true }
tree-sitter-zig = { version = "1.1", optional = true }
unicode-width = "^0.2"

[dev-dependencies]
anyhow = "^1"
crossterm = "^0.29"
font-kit = "0.14"
fontdb = "^0.23"
lipsum = "^0.9"
mermaid-rs-renderer = { version = "0.2", default-features = false }
pest_derive = "^2"
ratatui-image = { version = "11", default-features = false, features = [
    "crossterm",
] }
resvg = "0.46"
tiny-skia = "0.11"
usvg = "0.46"

[[example]]
name = "image"
required-features = ["image"]

[[example]]
name = "mermaid"
required-features = ["mermaid"]

[[example]]
name = "mermaid_image"
required-features = ["mermaid", "image"]

[[example]]
name = "selector"

[[example]]
name = "code"
required-features = ["highlight-lang-rust", "highlight-pest"]
